lab5/test/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character
    6 |    string s = "abc;
      |               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    7 |    char c = 'a;
      |             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    8 |    s = "abcd\";
      |        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    9 |    s = "abc|\
      |        ^
‡o°Ω‰U:5.15: invalid token ("\*/")
‡o°Ω‰U:5.20: syntax error, unexpected ';'
‡o°Ω‰U:6.15: invalid token ("abc;)
‡o°Ω‰U:7.9: syntax error, unexpected TOK_IDENT
‡o°Ω‰U:7.13: invalid token ('a;)
‡o°Ω‰U:8.8: invalid token ("abcd\";)
‡o°Ω‰U:9.8: invalid token ("abc|   ;)
‡o°Ω‰U:11.8: invalid token (23foobar)
